examples/test/testpolicy10986.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10986
  namespace: namespace433
spec:
  podSelector:
    matchLabels:
      key16: value34
      key32: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value22
          key28: value42
          key3: value45
      podSelector:
        matchLabels:
          key26: value21
          key29: value32
